# GaiaSharedPicture

./: .gitignore  README.md
Native/: CMakeLists.txt
Native/GaiaSharedPicture/: CMakeLists.txt  GaiaSharedPicture.hpp  HeaderCoder.cpp  HeaderCoder.hpp  PackageConfig.cmake.in  PictureReader.cpp  PictureReader.hpp  PictureWriter.cpp  PictureWriter.hpp
Native/TestReader/: CMakeLists.txt  Main.cpp
Native/TestWriter/: CMakeLists.txt  Main.cpp
